# arpit-django

./: .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
calendar/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
calendar/migrations/: 0001_initial.py  0002_entry_status_choices.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py
core/: exceptions.py  logging.py  middleware.py  models.py  permissions.py  responses.py  urls.py  utils.py  views.py
docs/: calendar-module-data-schema.md  calendar-module-epic.md  calendar-module-requirement-and-ui.md  calendar-module-technical-docs-index.md  calendar-module-user-stories.md  clickup-fe-be-db-subtasks-mcp-spec.md  tech-doc-01-view-and-navigate-calendar.md  tech-doc-02-see-entries-on-calendar.md  tech-doc-03-add-view-edit-delete-single-entry.md  tech-doc-04-multi-select-reschedule-resize-entries.md  tech-doc-05-filter-and-scope.md
requirements/: base.txt  local.txt  production.txt
scripts/: clickup_create_calendar_subtasks.py
